go-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: golang-pod
spec:
  containers:
    - name: golang-pod
      image: barniemakonda/nginx-with-curl:latest
      ports:
        - containerPort: 80
