custom-load-balancing.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nodeport
  labels:
    name: service-nodeport
spec:
  ports:
    - port: 80
      nodePort: 3001
  selector:
    name: node-js
  type: NodePort
