multiple-ports.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-port
  labels:
    name: multi-port
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: admin-access
      protocol: TCP
      port: 8888
  selector:
    name: multi-port
