node-labels.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-js-labels
  labels:
    name: node-js-labels
    app: node-js-express
    deployment: test
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    name: node-js-labels
    app: node-js-express
    deployment: test
