pod-scalling-example.yaml
apiVersion: v1
kind: Service
metadata:
  name: replica-sample
  labels:
    name: replica-sample
spec:
  type: LoadBalancer
  sessionAffinity: ClientIP
  ports:
    - port: 80
  selector:
    name: replica-sample
