sample-internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-service
  labels:
    name: internal-service
spec:
  ports:
    - port: 80
  selector:
    name: internal-service
