sample-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-curlsx
  labels:
    app: nginx-curls
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: nginx-curls
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-curlsy
  labels:
    app: nginx-curls
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: nginx-curls
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echomap
spec:
  rules:
    - host: foo.bar.com
      http:
        paths:
          - path: /foo
            backend:
              serviceName: nginx-curlsx
              servicePort: 80
    - host: bar.baz.com
      http:
        paths:
          - path: /bar
            backend:
              serviceName: nginx-curlsy
              servicePort: 80
          - path: /foo
            backend:
              serviceName: nginx-curlsx
              servicePort: 80
